--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,39 @@
     transform: rotate(360deg);
   }
 }
+
+.side-navigation {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  z-index: 1;
+  width: 80px;
+  background-color: #fff;
+  transition: width 0.2s ease-in-out;
+}
+
+.show-menu .side-navigation {
+  width: 200px;
+}
+
+.content-container {
+  margin-left: 80px;
+}
+
+.show-menu .content-container {
+  margin-left: 200px;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.content-container {
+  flex: 1;
+  overflow-y: scroll;
+  padding: 20px;
+}
